--- a/website/jade/sections/content.jade
+++ b/website/jade/sections/content.jade
@@ -1,4 +1,8 @@
 section.content#content
+  .successful
+    h3 Спасибо!</br> Ваша Заявка отправлена на обработку.</br> С Вами свяжется наш менеджер!
+    h3 BTC адрес: </br> ej8ufes8ousofuos
+    button Продолжить
   header.main-header-fixed
     .shadow
     nav.main-nav
