--- a/website/sass/variables.sass
+++ b/website/sass/variables.sass
@@ -100,8 +100,9 @@ $roboto           : 'Roboto', sans-serif
       max-width: 940px
       height: 500px
       background-color: white
-
-
+      @media (min-width: 1400px)
+        top: 40%
+        transform: translate(-50%, -50%)
       h1
         position: relative
         color: $main-blue
@@ -207,7 +208,7 @@ $roboto           : 'Roboto', sans-serif
       transform: translate(-50%, 0%)
       width: 100%
       max-width: 940px
-      min-height: 500px
+      height: 80vh
       background-color: white
       transform-origin: 0% 0%
       h1
@@ -252,7 +253,7 @@ $roboto           : 'Roboto', sans-serif
       transform: translate(-50%, 0%)
       width: 100%
       max-width: 940px
-      min-height: 500px
+      height: 80vh
       background-color: white
       transform-origin: 0% 0%
       h1
@@ -302,7 +303,7 @@ $roboto           : 'Roboto', sans-serif
       transform: translate(-50%, 0%)
       width: 100%
       max-width: 940px
-      min-height: 500px
+      height: 80vh
       background-color: white
       transform-origin: 0% 0%
       h1
